# WebcamWarrior

./: .gitignore  ApplicationWindow.cpp  CMakeLists.txt  Entity.cpp  Entity.h  Explosion.cpp  Explosion.hpp  GameWindow.cpp  GameWindow.hpp  GenericCHeader.hpp  Menu.cpp  Menu.hpp  Monster.cpp  Monster.h  Monster.hpp  OptionsWindow.cpp  OptionsWindow.hpp  SFMLHeader.hpp  SFMLclude.hpp  ScreenSelector.cpp  ScreenSelector.hpp  SliderSFML.cpp  SliderSFML.h  SliderSFML.hpp  SpawnSocket.cpp  SpawnSocket.h  SpawnSocket.hpp  SpawnTrack.cpp  SpawnTrack.h  SpawnTrack.hpp  WebcamControl.cpp  WebcamControl.hpp
Resources/: README.txt
